--- a/Finanasai/Views/Shared/_Layout.cshtml
+++ b/Finanasai/Views/Shared/_Layout.cshtml
@@ -33,13 +33,14 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Išlaidos <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li>@Html.ActionLink("Būsto išlaidos", "Index", "BustoIslaidos")</li>
-                            <li>@Html.ActionLink("Transportas", "Index", "Transportas")</li>
-                            <li>@Html.ActionLink("Maistas", "Index", "Maistas")</li>
-                            <li>@Html.ActionLink("Asmeninė priežiūra", "Index", "AsmeninePrieziura")</li>
-                            <li>@Html.ActionLink("Pramogos", "Index", "Pramogos")</li>
-                            <li>@Html.ActionLink("Dovanos", "Index", "Dovanos")</li>
-                            <li>@Html.ActionLink("Kita", "Index", "Kita")</li>
-                        </ul>
+                            <li>@Html.ActionLink("Būsto išlaidos eksperimentinis", "Index", "BustoIslaidosExperiment")</li>
+                    <li>@Html.ActionLink("Transportas", "Index", "Transportas")</li>
+                    <li>@Html.ActionLink("Maistas", "Index", "Maistas")</li>
+                    <li>@Html.ActionLink("Asmeninė priežiūra", "Index", "AsmeninePrieziura")</li>
+                    <li>@Html.ActionLink("Pramogos", "Index", "Pramogos")</li>
+                    <li>@Html.ActionLink("Dovanos", "Index", "Dovanos")</li>
+                    <li>@Html.ActionLink("Kita", "Index", "Kita")</li>
+                </ul>
                     </li>
                     <li>@Html.ActionLink("Klasifikatoriai", "Index", "Klasifikatoriai")</li>
                     <li>@Html.ActionLink("Santaupos", "Index", "Santaupos")</li>
