--- a/Finanasai/Views/Transportas/Create.cshtml
+++ b/Finanasai/Views/Transportas/Create.cshtml
@@ -1,4 +1,5 @@
-﻿@model Finansai.DAL.Transportas
+﻿@using Kendo.Mvc.UI
+@model Finansai.DAL.Transportas
 
 @{
     ViewBag.Title = "Create";
@@ -7,98 +8,153 @@
 <h2>Create</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>Transportas</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.MetaiId, "MetaiId", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Data, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("MetaiId", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.MetaiId, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.MenuoId, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.MenuoId, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.MenuoId, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.SavaiteId, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.SavaiteId, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.SavaiteId, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.DienaId, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.DienaId, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.DienaId, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Data, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Data, new { htmlAttributes = new { @class = "form-control" } })
+                @(Html.Kendo().DatePickerFor(model => model.Data)
+                .Format("yyyy-MM-dd"))
                 @Html.ValidationMessageFor(model => model.Data, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.MašinosPrieziura, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.MetaiId, "Metai", new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.MašinosPrieziura, new { htmlAttributes = new { @class = "form-control" } })
+                @(Html.Kendo().ComboBoxFor(model => model.MetaiId)
+          .DataTextField("MetaiPavadinimas")
+          .DataValueField("MetaiId")
+                  .DataSource(source =>
+                  {
+                      source.Read(read => read.Action("GetMetaiJsonResult", "Metai"));
+                  })
+                  .AutoBind(false)
+                  .Suggest(true)
+                )
+                @Html.ValidationMessageFor(model => model.MetaiId, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.MenuoId, new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @(Html.Kendo().ComboBoxFor(model => model.MenuoId)
+               .DataTextField("MenesiaiPavadinimas")
+               .DataValueField("MenesiaiId")
+               .DataSource(source =>
+                  {
+                      source.Read(read => read.Action("GetMenesiaiJsonResult", "Menesiai"));
+                  })
+                  .AutoBind(false)
+                  .Suggest(true)
+                )
+                @Html.ValidationMessageFor(model => model.MenuoId, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.SavaiteId, new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @(Html.Kendo().ComboBoxFor(model => model.SavaiteId)
+                .DataTextField("SavaitesPavadinimas")
+                .DataValueField("SavaitesId")
+                .DataSource(source =>
+                  {
+                      source.Read(read => read.Action("GetSavaitesJsonResult", "Savaites"));
+                  })
+                  .AutoBind(false)
+                  .Suggest(true)
+                )
+                @Html.ValidationMessageFor(model => model.SavaiteId, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.DienaId, new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @(Html.Kendo().ComboBoxFor(model => model.DienaId)
+                .DataTextField("DienosPavadinimas")
+                .DataValueField("DienosId")
+                .DataSource(source =>
+                  {
+                      source.Read(read => read.Action("GetDienosJsonResult", "Dienos"));
+                  })
+                  .AutoBind(false)
+                  .Suggest(true)
+                )
+                @Html.ValidationMessageFor(model => model.DienaId, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.MašinosPrieziura, new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @(Html.Kendo().NumericTextBoxFor(model => model.MašinosPrieziura)
+                  .Name("MašinosPrieziura")
+                  .Step(0.01m)
+                  .Decimals(2))
                 @Html.ValidationMessageFor(model => model.MašinosPrieziura, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.AutobusoTaksiIslaidos, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.AutobusoTaksiIslaidos, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.AutobusoTaksiIslaidos, new { htmlAttributes = new { @class = "form-control" } })
+                @(Html.Kendo().NumericTextBoxFor(model => model.AutobusoTaksiIslaidos)
+                .Name("AutobusoTaksiIslaidos")
+                .Step(0.01m)
+                .Decimals(2))
                 @Html.ValidationMessageFor(model => model.AutobusoTaksiIslaidos, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Draudimas, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Draudimas, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Draudimas, new { htmlAttributes = new { @class = "form-control" } })
+                @(Html.Kendo().NumericTextBoxFor(model => model.Draudimas)
+                .Name("Draudimas")
+                .Step(0.01m)
+                .Decimals(2))
                 @Html.ValidationMessageFor(model => model.Draudimas, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Kuras, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Kuras, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Kuras, new { htmlAttributes = new { @class = "form-control" } })
+                @(Html.Kendo().NumericTextBoxFor(model => model.Kuras)
+                .Name("Kuras")
+                .Step(0.01m)
+                .Decimals(2))
                 @Html.ValidationMessageFor(model => model.Kuras, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Plovimas, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Plovimas, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Plovimas, new { htmlAttributes = new { @class = "form-control" } })
+                @(Html.Kendo().NumericTextBoxFor(model => model.Plovimas)
+                .Name("Plovimas")
+                .Step(0.01m)
+                .Decimals(2))
                 @Html.ValidationMessageFor(model => model.Plovimas, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Kita, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Kita, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Kita, new { htmlAttributes = new { @class = "form-control" } })
+                @(Html.Kendo().NumericTextBoxFor(model => model.Kita)
+                .Name("Kita")
+                .Step(0.01m)
+                .Decimals(2))
                 @Html.ValidationMessageFor(model => model.Kita, "", new { @class = "text-danger" })
             </div>
         </div>
